<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.gigold.pay</groupId>
		<artifactId>demo</artifactId>
		<version>1.0.0</version>
	</parent>
	<groupId>com.gigold.pay</groupId>
	<artifactId>demo-dubbo-web</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>demo-dubbo-web Maven Webapp</name>
	<url>http://maven.apache.org</url>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		<groupId>com.gigold.pay</groupId>
		<artifactId>pay-framework-version</artifactId>
		<version>0.1.5-SNAPSHOT</version>
	</dependency>
	<dependency>
		<groupId>com.gigold.pay</groupId>
		<artifactId>demo-api</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</dependency>
		
	</dependencies>

	<build>
		<finalName>demo-dubbo-web</finalName>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
				</includes>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
					<!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<argLine>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<includes>
						<include>**/*Test*.java</include>
					</includes>
					<excludes />
				</configuration>
			</plugin>
		</plugins>
	</build>




</project>
